# snippets

./: .gitignore  funtoo-make.conf
computer-graphics-ufrj/: README.org
computer-graphics-ufrj/old-lcg/: chapter1-fps.c  chapter1-mouse-keyboard.c  chapter1.c  chapter2-init.c  chapter2.c  journal-data-RedNotebook-Export_2013-12-20.txt  opengl.dia  simplemouse.cpp
computer-graphics/ufrj-2014.2/: .gitignore  CMakeLists.txt  LICENSE  hello.cpp  hello.py  hello2.cpp
cpp/cmake-gtest-template/: .CMakeLists.txt.un~  CMakeLists.txt
cpp/fltk-fluid/: CMakeLists.txt  callbacks.cxx  hello.fl
docker-portable-arch/portable-arch/: Dockerfile  README.md  install_cower.sh
dot/: eci.dot
fltk-fluid/: custom.cxx
icpc/: codility-TapeEquilibrium.cpp  lists.org
icpc/icpc-2012-2013/: a.cpp  b.cpp  c.cpp  c.in  e.cpp  f.cpp  h.cpp  h.in  i.cpp  i.in  j.cpp  j.in  k.cpp  k.in  khelper.cpp  live2190.c  live4033.cpp  live4055.cpp  live6319.java  pe1.py  pe2.cpp  spoj-palindromo.cpp  spoj1029.c  spoj1043.cpp  spoj1043alt.cpp  spoj12026.go  spoj1710.cpp  spoj1774.cpp  spoj1846.cpp  spoj2.cpp  spoj2727.cpp  spoj2727_2.cpp  spoj3921.cpp  spoj3923.cpp  spoj42.c  spoj58.cpp  spoj5977.cpp  spoj5977_2.cpp  spoj5977_3.cpp  spoj6691.cpp  (+185 more)
icpc/icpc-journal-blog/: binary_search.cpp  binary_search.in  binary_search.out  bubble_sort.cpp  gcd.cpp  insertion_sort.cpp  merge_sort.cpp  sort.out
icpc/obi-2012/: dama.c  (+19 more)
matlab/: evals.m  plotrand.m  symbolic-math.m
php/: 3.php  dbconnect.php  form_get.php  session2.php
windows-setups-nevermore/: README.md  packages.config  setup.cmd  setup.ps1
(+87 files in other folders)
